--- a/01_week/0101_scratch/Dockerfile
+++ b/01_week/0101_scratch/Dockerfile
@@ -6,3 +6,14 @@ COPY . .
 
 RUN go mod download
 RUN go build -o /go/bin/app.bin cmd/main.go
+
+FROM alpine:latest
+WORKDIR /go
+
+COPY --from=build /go/bin/app.bin .
+VOLUME /upload
+RUN adduser -D dev && mkdir ./uploads && chown -R dev:dev /go
+
+EXPOSE 9999
+USER dev
+ENTRYPOINT ["/go/app.bin"]
