--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build ./01_week/0101_scratch --file ./01_week/0101_scratch/Dockerfile --tag 0101_scratch:$(date +%s)
+      run: DOCKER_BUILDKIT=0 docker build ./01_week/0101_scratch --file ./01_week/0101_scratch/Dockerfile --tag 0101_scratch:$(date +%s)
