--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,4 +19,4 @@ jobs:
     - name: Build the Docker image
       run: DOCKER_BUILDKIT=0 docker build ./01_week/0101_scratch --file ./01_week/0101_scratch/Dockerfile --tag 0101_scratch:$(date +%s)
     - name: Push docker image to repo
-      run: docker push ghcr.io/${{ github.repository_owner }}/slio-edu:latest
+      run: docker push ghcr.io/iexad/slio-edu:latest
